--- a/API/pom.xml
+++ b/API/pom.xml
@@ -40,6 +40,12 @@
         <artifactId>selenium-java</artifactId>
         <version>4.23.0</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.json/json -->
+    <dependency>
+        <groupId>org.json</groupId>
+        <artifactId>json</artifactId>
+        <version>20240303</version>
+    </dependency>
 
 </dependencies>
 </project>
